fix: wrong width under inline-form (#784)

--- a/src/styles/editableArea.less
+++ b/src/styles/editableArea.less
@@ -10,7 +10,8 @@
   position: relative;
 
 
-  &-input {
+  & &-input {
+    width: 100%;
     input {
       overflow: hidden;
       text-overflow: ellipsis;
